unpackaged/main/default/objects/MarketingPlan__c/MarketingPlan__c.object-meta.xml
<CustomObject>
    <description>Marketing Plan Budget records for all levels of the hierarchy.</description>
    <label>Marketing Plan</label>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>