unpackaged/main/default/objects/MarketingPlan__c/fields/AllocatedBudget__c.field-meta.xml
<CustomField>
    <fullName>AllocatedBudget__c</fullName>
    <description>Sum of all Related Marketing Plan budgets.</description>
    <inlineHelpText>Sum of all Related Marketing Plan budgets.</inlineHelpText>
    <label>MP Allocated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>