unpackaged/main/default/objects/MarketingPlan__c/fields/AllocatedBudget_USD_Hidden__c.field-meta.xml
<CustomField>
    <fullName>AllocatedBudget_USD_Hidden__c</fullName>
    <label>MP Allocated Budget USD (Hidden)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>