unpackaged/main/default/objects/MarketingPlan__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Tags__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <filterItems>
            <field>Tags__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Marketing Plans (Brand)</relationshipLabel>
    <relationshipName>Marketing_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>