unpackaged/main/default/objects/MarketingPlan__c/fields/BrandQuality__c.field-meta.xml
<CustomField>
    <fullName>BrandQuality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quality</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Tags__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Tags__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand Quality</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Marketing Plans (Brand Quality)</relationshipLabel>
    <relationshipName>Marketing_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>