unpackaged/main/default/objects/MarketingPlan__c/fields/Budget_USD_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Budget_USD_Hidden__c</fullName>
    <label>MP Budget USD (Hidden)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>