unpackaged/main/default/objects/MarketingPlan__c/fields/CampaignBudget__c.field-meta.xml
<CustomField>
    <fullName>CampaignBudget__c</fullName>
    <description>This field is used to populate null values for Marketing Plan records with "Campaigns Prohibited - Editable" and "Campaigns Prohibited - Not Editable" Record Types.</description>
    <formula>IF(CampaignBudgetNativeHidden__c &gt; 0, CampaignBudgetNativeHidden__c , IF(AND((CampaignBudgetNativeHidden__c)=0, CONTAINS( RecordType.Name,"Campaigns Allowed")),0,NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all Related Campaign Budgets.</inlineHelpText>
    <label>Campaign Allocated Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>