unpackaged/main/default/objects/MarketingPlan__c/fields/CampaignBudgetNativeHidden__c.field-meta.xml
<CustomField>
    <fullName>CampaignBudgetNativeHidden__c</fullName>
    <label>Campaign Allocated Budget Native</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>