unpackaged/main/default/objects/MarketingPlan__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>Global Marketing</fullName>
            </value>
            <value>
                <fullName>MEX</fullName>
            </value>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>US</label>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>