unpackaged/main/default/objects/MarketingPlan__c/fields/CYInitialBudget__c.field-meta.xml
<CustomField>
    <fullName>CYInitialBudget__c</fullName>
    <label>CY Initial Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>