unpackaged/main/default/objects/MarketingPlan__c/fields/LYInitialBudget__c.field-meta.xml
<CustomField>
    <fullName>LYInitialBudget__c</fullName>
    <label>LY Initial Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>