unpackaged/main/default/objects/MarketingPlan__c/fields/ParentMarketingPlan__c.field-meta.xml
<CustomField>
    <fullName>ParentMarketingPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Marketing Plan</label>
    <referenceTo>MarketingPlan__c</referenceTo>
    <relationshipLabel>Related Marketing Plans</relationshipLabel>
    <relationshipName>Marketing_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>