unpackaged/main/default/objects/MarketingPlan__c/fields/Queue_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Queue_Email_Address__c</fullName>
    <formula>Owner:Queue.QueueEmail</formula>
    <label>Queue Email Address</label>
    <type>Text</type>
</CustomField>