unpackaged/main/default/objects/MarketingPlan__c/fields/SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Company_Code__c</fullName>
    <label>SAP Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>