unpackaged/main/default/objects/MarketingPlan__c/fields/SAP_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cost_Center__c</fullName>
    <label>SAP Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>