unpackaged/main/default/objects/MarketingPlan__c/fields/SAP_Sales_District__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_District__c</fullName>
    <formula>Territory__r.SAP_Sales_District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Sales District</label>
    <type>Text</type>
</CustomField>