unpackaged/main/default/objects/MarketingPlan__c/fields/SAP_Territory_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>SAP_Territory_Abbreviation__c</fullName>
    <formula>Territory__r.Territory_Abbreviation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Territory Abbreviation</label>
    <type>Text</type>
</CustomField>