unpackaged/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Allowed_Not_Editable_AUS_WBS.recordType-meta.xml
<RecordType>
    <fullName>Campaigns_Allowed_Not_Editable_AUS_WBS</fullName>
    <active>true</active>
    <description>Marketing Plan is NOT editable and allows for AUS WBS Campaigns.</description>
    <label>Campaigns Allowed - Not Editable (AUS WBS)</label>
</RecordType>