unpackaged/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Prohibited_Not_Editable.recordType-meta.xml
<RecordType>
    <fullName>Campaigns_Prohibited_Not_Editable</fullName>
    <active>true</active>
    <description>Marketing Plan is NOT editable and DOES NOT allow for Campaigns.</description>
    <label>Campaigns Prohibited - Not Editable</label>
</RecordType>