unpackaged/main/default/objects/MarketingPlan__c/recordTypes/Campaigns_Prohibited_Not_Editable_AUS_WBS.recordType-meta.xml
<RecordType>
    <fullName>Campaigns_Prohibited_Not_Editable_AUS_WBS</fullName>
    <active>true</active>
    <description>Marketing Plan is NOT editable and DOES NOT allow for AUS WBS Campaigns.</description>
    <label>Campaigns Prohibited - Not Editable (AUS WBS)</label>
</RecordType>