unpackaged/main/default/objects/MarketingPlan__c/validationRules/Balance_lessthan_Budget.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_lessthan_Budget</fullName>
    <active>true</active>
    <description>Campaign Allocated Budget cannot exceed MP Budget.</description>
    <errorConditionFormula>CampaignBalance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Budget__c</errorDisplayField>
    <errorMessage>Campaign Allocated Budget cannot exceed MP Budget. Either increase the MP Budget value or decrease the budget value on any associated Campaigns.</errorMessage>
</ValidationRule>