unpackaged/main/default/objects/MarketingPlan__c/validationRules/Currency_cannot_change_after_created.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_cannot_change_after_created</fullName>
    <active>true</active>
    <description>To ensure financial data integrity, we have prevented a Marketing Plan's currency from changing after the record is initially created. If currency change is needed, please create a new MarketingPlan with the correct currency set, and transfer funds.</description>
    <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>To ensure financial data integrity, we have prevented a Marketing Plan's Currency from changing after the record is initially created. If currency change is needed, please create a new Marketing Plan with the correct Currency, and transfer funds/plans.</errorMessage>
</ValidationRule>