unpackaged/main/default/objects/MarketingPlan__c/validationRules/MPBudgetCannotbeLessThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>MPBudgetCannotbeLessThanZero</fullName>
    <active>true</active>
    <description>MP Budget cannot be less than zero dollars.</description>
    <errorConditionFormula>Budget__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Budget__c</errorDisplayField>
    <errorMessage>MP Budget cannot be less than zero dollars. Please update the MP Budget field.</errorMessage>
</ValidationRule>